feat(perf): scale chunk multi-threading to 22 threads and remove lazy chunk loading stub